fixed techology naming

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,29 +1,35 @@
 [technology-name]
+gun-turret-range=Gun turret range
 gun-turret-range-1=Gun turret range 1
 gun-turret-range-2=Gun turret range 2
 gun-turret-range-3=Gun turret range 3
 gun-turret-range-4=Gun turret range 4
 gun-turret-range-5=Gun turret range 5
+laser-turret-range=Laser turret range
 laser-turret-range-1=Laser turret range 1
 laser-turret-range-2=Laser turret range 2
 laser-turret-range-3=Laser turret range 3
 laser-turret-range-4=Laser turret range 4
 laser-turret-range-5=Laser turret range 5
+flamethrower-turret-range=Flamethrower turret range
 flamethrower-turret-range-1=Flamethrower turret range 1
 flamethrower-turret-range-2=Flamethrower turret range 2
 flamethrower-turret-range-3=Flamethrower turret range 3
 
 [technology-description]
+gun-turret-range=Increases the attack range of all gun turrets.
 gun-turret-range-1=Increases the attack range of all gun turrets by +3 tiles.
 gun-turret-range-2=Increases the attack range of all gun turrets by +3 tiles (total: +6).
 gun-turret-range-3=Increases the attack range of all gun turrets by +3 tiles (total: +9).
 gun-turret-range-4=Increases the attack range of all gun turrets by +3 tiles (total: +12).
 gun-turret-range-5=Increases the attack range of all gun turrets by +3 tiles (total: +15).
+laser-turret-range=Increases the attack range of all laser turrets.
 laser-turret-range-1=Increases the attack range of all laser turrets by +3 tiles.
 laser-turret-range-2=Increases the attack range of all laser turrets by +3 tiles (total: +6).
 laser-turret-range-3=Increases the attack range of all laser turrets by +3 tiles (total: +9).
 laser-turret-range-4=Increases the attack range of all laser turrets by +3 tiles (total: +12).
 laser-turret-range-5=Increases the attack range of all laser turrets by +3 tiles (total: +15).
+flamethrower-turret-range=Increases the attack range of all flamethrower turrets.
 flamethrower-turret-range-1=Increases the attack range of all flamethrower turrets by +3 tiles.
 flamethrower-turret-range-2=Increases the attack range of all flamethrower turrets by +3 tiles (total: +6).
 flamethrower-turret-range-3=Increases the attack range of all flamethrower turrets by +3 tiles (total: +9).
