fixed naming in damage research technologies

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,3 +1,18 @@
+[entity-name]
+gun-turret-ranged-1=Gun turret
+gun-turret-ranged-2=Gun turret
+gun-turret-ranged-3=Gun turret
+gun-turret-ranged-4=Gun turret
+gun-turret-ranged-5=Gun turret
+laser-turret-ranged-1=Laser turret
+laser-turret-ranged-2=Laser turret
+laser-turret-ranged-3=Laser turret
+laser-turret-ranged-4=Laser turret
+laser-turret-ranged-5=Laser turret
+flamethrower-turret-ranged-1=Flamethrower turret
+flamethrower-turret-ranged-2=Flamethrower turret
+flamethrower-turret-ranged-3=Flamethrower turret
+
 [technology-name]
 gun-turret-range=Gun turret range
 gun-turret-range-1=Gun turret range 1
