Add support for rocket and tesla turrets

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -12,6 +12,16 @@ laser-turret-ranged-5=Laser turret
 flamethrower-turret-ranged-1=Flamethrower turret
 flamethrower-turret-ranged-2=Flamethrower turret
 flamethrower-turret-ranged-3=Flamethrower turret
+rocket-turret-ranged-1=Rocket turret
+rocket-turret-ranged-2=Rocket turret
+rocket-turret-ranged-3=Rocket turret
+rocket-turret-ranged-4=Rocket turret
+rocket-turret-ranged-5=Rocket turret
+tesla-turret-ranged-1=Tesla turret
+tesla-turret-ranged-2=Tesla turret
+tesla-turret-ranged-3=Tesla turret
+tesla-turret-ranged-4=Tesla turret
+tesla-turret-ranged-5=Tesla turret
 
 [technology-name]
 gun-turret-range=Gun turret range
@@ -30,6 +40,18 @@ flamethrower-turret-range=Flamethrower turret range
 flamethrower-turret-range-1=Flamethrower turret range 1
 flamethrower-turret-range-2=Flamethrower turret range 2
 flamethrower-turret-range-3=Flamethrower turret range 3
+rocket-turret-range=Rocket turret range
+rocket-turret-range-1=Rocket turret range 1
+rocket-turret-range-2=Rocket turret range 2
+rocket-turret-range-3=Rocket turret range 3
+rocket-turret-range-4=Rocket turret range 4
+rocket-turret-range-5=Rocket turret range 5
+tesla-turret-range=Tesla turret range
+tesla-turret-range-1=Tesla turret range 1
+tesla-turret-range-2=Tesla turret range 2
+tesla-turret-range-3=Tesla turret range 3
+tesla-turret-range-4=Tesla turret range 4
+tesla-turret-range-5=Tesla turret range 5
 
 [technology-description]
 gun-turret-range=Increases the attack range of all gun turrets.
@@ -48,6 +70,18 @@ flamethrower-turret-range=Increases the attack range of all flamethrower turrets
 flamethrower-turret-range-1=Increases the attack range of all flamethrower turrets by +3 tiles.
 flamethrower-turret-range-2=Increases the attack range of all flamethrower turrets by +3 tiles (total: +6).
 flamethrower-turret-range-3=Increases the attack range of all flamethrower turrets by +3 tiles (total: +9).
+rocket-turret-range=Increases the attack range of all rocket turrets.
+rocket-turret-range-1=Increases the attack range of all rocket turrets by +3 tiles.
+rocket-turret-range-2=Increases the attack range of all rocket turrets by +3 tiles (total: +6).
+rocket-turret-range-3=Increases the attack range of all rocket turrets by +3 tiles (total: +9).
+rocket-turret-range-4=Increases the attack range of all rocket turrets by +3 tiles (total: +12).
+rocket-turret-range-5=Increases the attack range of all rocket turrets by +3 tiles (total: +15).
+tesla-turret-range=Increases the attack range of all tesla turrets.
+tesla-turret-range-1=Increases the attack range of all tesla turrets by +3 tiles.
+tesla-turret-range-2=Increases the attack range of all tesla turrets by +3 tiles (total: +6).
+tesla-turret-range-3=Increases the attack range of all tesla turrets by +3 tiles (total: +9).
+tesla-turret-range-4=Increases the attack range of all tesla turrets by +3 tiles (total: +12).
+tesla-turret-range-5=Increases the attack range of all tesla turrets by +3 tiles (total: +15).
 
 [technology-effect]
 turret-range-bonus=Turret range: __1__ tiles
