add modded turret support

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -90,3 +90,15 @@ turret-range-bonus=Turret range: __1__ tiles
 turret-range-research-upgrade-complete=All __1__s upgraded! Range bonus: +__2__ tiles (__3__ turrets upgraded)
 turret-range-research-prototype-missing=Could not upgrade turret: prototype '__1__' not found. Please report this issue.
 turret-range-research-upgrade-failed=Could not upgrade turret at (__1__, __2__) to '__3__'. Turret remains unchanged.
+
+[mod-setting-name]
+turret-range-research-enable-modded-turrets=Enable modded turret support
+turret-range-research-auto-discover=Auto-discover modded turrets
+turret-range-research-use-ammo-mapping=Map modded turrets to vanilla research by ammo type
+turret-range-research-default-max-level=Default max research level for modded turrets
+
+[mod-setting-description]
+turret-range-research-enable-modded-turrets=Allow this mod to support modded turrets (both registered and auto-discovered). Disable to only support vanilla turrets.
+turret-range-research-auto-discover=Automatically discover and support modded turrets of compatible types (ammo-turret, electric-turret, fluid-turret). Requires 'Enable modded turret support' to be enabled.
+turret-range-research-use-ammo-mapping=Auto-discovered turrets will share vanilla research based on their ammo type (e.g., rocket turrets use rocket-turret-range). If disabled, each modded turret gets its own unique research tree.
+turret-range-research-default-max-level=Default maximum research level for auto-discovered modded turrets when NOT using ammo mapping. Does not affect vanilla turrets or explicitly registered modded turrets.
