update technology modifier descriptions

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -23,6 +23,31 @@ tesla-turret-ranged-3=Tesla turret
 tesla-turret-ranged-4=Tesla turret
 tesla-turret-ranged-5=Tesla turret
 
+[modifier-description]
+gun-turret-ranged-1-attack-bonus=Gun turret
+gun-turret-ranged-2-attack-bonus=Gun turret
+gun-turret-ranged-3-attack-bonus=Gun turret
+gun-turret-ranged-4-attack-bonus=Gun turret
+gun-turret-ranged-5-attack-bonus=Gun turret
+laser-turret-ranged-1-attack-bonus=Laser turret
+laser-turret-ranged-2-attack-bonus=Laser turret
+laser-turret-ranged-3-attack-bonus=Laser turret
+laser-turret-ranged-4-attack-bonus=Laser turret
+laser-turret-ranged-5-attack-bonus=Laser turret
+flamethrower-turret-ranged-1-attack-bonus=Flamethrower turret
+flamethrower-turret-ranged-2-attack-bonus=Flamethrower turret
+flamethrower-turret-ranged-3-attack-bonus=Flamethrower turret
+rocket-turret-ranged-1-attack-bonus=Rocket turret
+rocket-turret-ranged-2-attack-bonus=Rocket turret
+rocket-turret-ranged-3-attack-bonus=Rocket turret
+rocket-turret-ranged-4-attack-bonus=Rocket turret
+rocket-turret-ranged-5-attack-bonus=Rocket turret
+tesla-turret-ranged-1-attack-bonus=Tesla turret
+tesla-turret-ranged-2-attack-bonus=Tesla turret
+tesla-turret-ranged-3-attack-bonus=Tesla turret
+tesla-turret-ranged-4-attack-bonus=Tesla turret
+tesla-turret-ranged-5-attack-bonus=Tesla turret
+
 [technology-name]
 gun-turret-range=Gun turret range
 gun-turret-range-1=Gun turret range 1
